--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,4 +1,4 @@
-name: 'Terraform'
+name: 'Terraform CI'
 
 on:
   push:
@@ -7,16 +7,6 @@ on:
   pull_request:
     branches:
       - main
-  workflow_dispatch:
-    inputs:
-      action:
-        type: choice
-        description: 'Select Action to Perform'
-        required: true
-        options:
-          - create
-          - destroy
-          - force-unlock
 
 permissions:
   contents: write
@@ -47,15 +37,6 @@ jobs:
           sed -i "s|OWNER/REPO|$REPO_PATH|g" backend.tf
           sed -i "s|GITHUB_TOKEN|${{ secrets.TF_GITHUB_TOKEN }}|g" backend.tf
 
-      - name: Force Unlock State
-        if: github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'force-unlock'
-        run: |
-          terraform init
-          terraform force-unlock -force "$(terraform state pull 2>&1 | grep -o 'ID: [0-9a-f\-]*' | cut -d' ' -f2)"
-        env:
-          GITHUB_TOKEN: ${{ secrets.TF_GITHUB_TOKEN }}
-          TF_VAR_github_token: ${{ secrets.TF_GITHUB_TOKEN }}
-
       - name: Terraform Format
         id: fmt
         run: terraform fmt -check
@@ -78,20 +59,10 @@ jobs:
           || true
         continue-on-error: true
 
-      - name: Terraform Plan Create
+      - name: Terraform Plan
         id: plan
-        if: github.event_name == 'pull_request' || (github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'create')
+        if: github.event_name == 'pull_request'
         run: terraform plan -no-color
-        env:
-          GITHUB_TOKEN: ${{ secrets.TF_GITHUB_TOKEN }}
-          TF_VAR_github_token: ${{ secrets.TF_GITHUB_TOKEN }}
-          TF_VAR_github_owner: ${{ github.repository_owner }}
-        continue-on-error: true
-
-      - name: Terraform Plan Destroy
-        id: plan-destroy
-        if: github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'destroy'
-        run: terraform plan -destroy -no-color
         env:
           GITHUB_TOKEN: ${{ secrets.TF_GITHUB_TOKEN }}
           TF_VAR_github_token: ${{ secrets.TF_GITHUB_TOKEN }}
@@ -126,31 +97,12 @@ jobs:
             })
 
       - name: Terraform Plan Status
-        if: steps.plan.outcome == 'failure' || steps.plan-destroy.outcome == 'failure'
+        if: steps.plan.outcome == 'failure'
         run: exit 1
 
       - name: Terraform Apply
-        if: |
-          (github.ref == 'refs/heads/main' && github.event_name == 'push') ||
-          (github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'create')
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: terraform apply -auto-approve
-        env:
-          GITHUB_TOKEN: ${{ secrets.TF_GITHUB_TOKEN }}
-          TF_VAR_github_token: ${{ secrets.TF_GITHUB_TOKEN }}
-          TF_VAR_github_owner: ${{ github.repository_owner }}
-
-      - name: Verify State File
-        if: always()
-        run: |
-          echo "Checking terraform.tfstate in repository..."
-          curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-               -H "Accept: application/vnd.github.v3+json" \
-               https://api.github.com/repos/${{ github.repository }}/contents/terraform.tfstate | \
-          jq -r '.sha // empty' && echo "✅ State file found!" || echo "❌ State file not found"
-
-      - name: Terraform Destroy
-        if: github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'destroy'
-        run: terraform destroy -auto-approve
         env:
           GITHUB_TOKEN: ${{ secrets.TF_GITHUB_TOKEN }}
           TF_VAR_github_token: ${{ secrets.TF_GITHUB_TOKEN }}
