--- a/.github/workflows/terraform-manual.yml
+++ b/.github/workflows/terraform-manual.yml
@@ -56,7 +56,18 @@ jobs:
         if: github.event.inputs.action == 'force-unlock'
         run: |
           terraform init -lock=false
-          terraform force-unlock -force "$(terraform state pull 2>&1 | grep -o 'ID: [0-9a-f\-]*' | cut -d' ' -f2)"
+          # Try to get the lock ID
+          LOCK_ID=$(curl -s -H "Authorization: token ${{ secrets.TF_GITHUB_TOKEN }}" \
+                        -H "Accept: application/vnd.github.v3+json" \
+                        "https://api.github.com/repos/${{ github.repository }}/contents/.terraform.tfstate.lock.info" | \
+                    jq -r '.content' | base64 --decode 2>/dev/null | jq -r '.ID' || echo "")
+          
+          if [ ! -z "$LOCK_ID" ]; then
+            echo "Found lock with ID: $LOCK_ID"
+            terraform force-unlock -force "$LOCK_ID"
+          else
+            echo "No lock found or unable to determine lock ID"
+          fi
         env:
           GITHUB_TOKEN: ${{ secrets.TF_GITHUB_TOKEN }}
           TF_VAR_github_token: ${{ secrets.TF_GITHUB_TOKEN }}
