--- a/.github/workflows/terraform-manual.yml
+++ b/.github/workflows/terraform-manual.yml
@@ -44,11 +44,23 @@ jobs:
       - name: Initialize Empty State
         if: github.event.inputs.action == 'create'
         run: |
-          echo '{}' > terraform.tfstate
+          # Create a properly formatted empty state file
+          cat > terraform.tfstate << 'EOF'
+          {
+            "version": 4,
+            "terraform_version": "1.12.1",
+            "serial": 1,
+            "lineage": "$(uuidgen)",
+            "outputs": {},
+            "resources": [],
+            "check_results": null
+          }
+          EOF
+          
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
           git add terraform.tfstate
-          git commit -m "Initialize empty state file" || true
+          git commit -m "Initialize properly formatted state file" || true
           git push || true
         continue-on-error: true
 
