--- a/.github/workflows/terraform-manual.yml
+++ b/.github/workflows/terraform-manual.yml
@@ -45,18 +45,19 @@ jobs:
         if: github.event.inputs.action == 'create'
         run: |
           # Create a properly formatted empty state file
-          STATE_CONTENT=$(cat << 'EOF'
-          {
+          STATE_CONTENT='{
             "version": 4,
             "terraform_version": "1.12.1",
             "serial": 1,
-            "lineage": "$(uuidgen)",
+            "lineage": "'$(uuidgen)'",
             "outputs": {},
             "resources": [],
             "check_results": null
-          }
-          EOF
-          )
+          }'
+
+          # Encode content to base64
+          ENCODED_CONTENT=$(echo -n "$STATE_CONTENT" | base64)
+          echo "State content encoded"
 
           # Check if state file exists
           STATE_RESPONSE=$(curl -s -H "Authorization: token ${{ secrets.TF_GITHUB_TOKEN }}" \
@@ -72,24 +73,36 @@ jobs:
             SHA=""
           fi
 
-          # Prepare the request body
-          REQUEST_BODY=$(jq -n \
-            --arg content "$(echo "$STATE_CONTENT" | base64 -w 0)" \
-            --arg message "Initialize/Update Terraform state" \
-            --arg sha "$SHA" \
-            '{
-              message: $message,
-              content: $content,
-              sha: (if $sha == "" then null else $sha end)
-            }')
+          # Create the JSON payload
+          JSON_PAYLOAD='{
+            "message": "Initialize/Update Terraform state",
+            "content": "'"$ENCODED_CONTENT"'",
+            "sha": '"$([ -z "$SHA" ] && echo "null" || echo "\"$SHA\"")"'
+          }'
 
+          echo "Sending request to GitHub API..."
           # Create/Update the state file in the repository
-          curl -X PUT \
+          RESPONSE=$(curl -X PUT \
             -H "Authorization: token ${{ secrets.TF_GITHUB_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
             -H "Content-Type: application/json" \
             "https://api.github.com/repos/${{ github.repository }}/contents/terraform.tfstate" \
-            -d "$REQUEST_BODY"
+            -d "$JSON_PAYLOAD")
+
+          echo "API Response:"
+          echo "$RESPONSE" | jq '.'
+
+          # Verify the content was saved correctly
+          echo "Verifying state file content..."
+          VERIFY_RESPONSE=$(curl -s -H "Authorization: token ${{ secrets.TF_GITHUB_TOKEN }}" \
+                              -H "Accept: application/vnd.github.v3+json" \
+                              "https://api.github.com/repos/${{ github.repository }}/contents/terraform.tfstate")
+          
+          echo "Decoded content from GitHub:"
+          echo "$VERIFY_RESPONSE" | jq -r '.content' | base64 -d || echo "Failed to decode content"
+
+          # Wait a moment for GitHub to process the file
+          sleep 5
         env:
           GITHUB_TOKEN: ${{ secrets.TF_GITHUB_TOKEN }}
 
