--- a/.github/workflows/terraform-manual.yml
+++ b/.github/workflows/terraform-manual.yml
@@ -39,15 +39,17 @@ jobs:
           if [ -f "terraform.state.link" ]; then
             echo "previous_run_id=$(grep 'run_id:' terraform.state.link | cut -d' ' -f2)" >> $GITHUB_OUTPUT
             echo "previous_workflow=$(grep 'workflow_id:' terraform.state.link | cut -d' ' -f2)" >> $GITHUB_OUTPUT
+            echo "previous_artifact_id=$(grep 'artifact_id:' terraform.state.link | cut -d' ' -f2)" >> $GITHUB_OUTPUT
           fi
 
       - name: Download Previous State
-        if: steps.state-location.outputs.previous_run_id != ''
+        if: steps.state-location.outputs.previous_artifact_id != ''
         uses: actions/download-artifact@v4
         continue-on-error: true
         with:
           name: terraform-state
           path: .
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           run-id: ${{ steps.state-location.outputs.previous_run_id }}
 
       - name: Initialize Empty State
@@ -105,6 +107,7 @@ jobs:
 
       - name: Upload State
         if: always()
+        id: upload-state
         uses: actions/upload-artifact@v4
         with:
           name: terraform-state
@@ -112,11 +115,23 @@ jobs:
           retention-days: 90
           if-no-files-found: error
 
+      - name: Get Artifact ID
+        if: success()
+        id: artifact
+        run: |
+          # Wait a moment for the artifact to be processed
+          sleep 5
+          ARTIFACT_ID=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            "https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts" | \
+            jq -r '.artifacts[] | select(.name=="terraform-state") | .id')
+          echo "artifact_id=$ARTIFACT_ID" >> $GITHUB_OUTPUT
+
       - name: Update State Link
         if: success()
         run: |
           echo "run_id: ${{ github.run_id }}" > terraform.state.link
           echo "workflow_id: ${{ github.workflow }}" >> terraform.state.link
+          echo "artifact_id: ${{ steps.artifact.outputs.artifact_id }}" >> terraform.state.link
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
           git add terraform.state.link
