destroy default branches separately

--- a/.github/workflows/terraform-manual.yml
+++ b/.github/workflows/terraform-manual.yml
@@ -107,7 +107,12 @@ jobs:
 
       - name: Terraform Destroy
         if: github.event.inputs.action == 'destroy'
-        run: terraform destroy -auto-approve -input=false
+        run: |
+          # Target only the mojeDefaultBranch resources
+          terraform destroy -auto-approve -input=false \
+            # -target='module.branch.github_branch_default.default_branch[*]' \
+            -target='module.branch.github_branch.branches["*_mojeDefaultBranch"]'
+          terraform destroy -auto-approve -input=false
         env:
           GITHUB_TOKEN: ${{ secrets.TF_GITHUB_TOKEN }}
           TF_VAR_github_token: ${{ secrets.TF_GITHUB_TOKEN }}
