Fix destroy syntax for target destroy

--- a/.github/workflows/terraform-manual.yml
+++ b/.github/workflows/terraform-manual.yml
@@ -108,12 +108,11 @@ jobs:
       - name: Terraform Destroy
         if: github.event.inputs.action == 'destroy'
         run: |
-          # Target all repositories for destruction
-          terraform destroy -auto-approve -input=false \
-            -target='module.repository.github_repository.repos[*]'
-
-          # Destroy all resources  
-          #terraform destroy -auto-approve -input=false  
+          # Target only repositories for destruction
+          for repo in xxx yyy zzz; do
+            terraform destroy -auto-approve -input=false \
+              -target="module.repository.github_repository.repos[\"$repo\"]"
+          done
         env:
           GITHUB_TOKEN: ${{ secrets.TF_GITHUB_TOKEN }}
           TF_VAR_github_token: ${{ secrets.TF_GITHUB_TOKEN }}
