--- a/.github/workflows/terraform-manual.yml
+++ b/.github/workflows/terraform-manual.yml
@@ -111,7 +111,7 @@ jobs:
           # Target only repositories for destruction
           for repo in xxx yyy zzz; do
             terraform destroy -auto-approve -input=false \
-              -target="module.repository.github_repository.repos[$repo]"
+              -target="module.repository.github_repository.repos["$repo"]"
           done
         env:
           GITHUB_TOKEN: ${{ secrets.TF_GITHUB_TOKEN }}
