--- a/.github/workflows/terraform-manual.yml
+++ b/.github/workflows/terraform-manual.yml
@@ -109,10 +109,11 @@ jobs:
         if: github.event.inputs.action == 'destroy'
         run: |
           # Target only repositories for destruction
-          for repo in xxx yyy zzz; do
-            terraform destroy -auto-approve -input=false \
-              -target="module.repository.github_repository.repos"
-          done
+          #terraform destroy -auto-approve -input=false \
+          #  -target="module.repository.github_repository.repos"
+
+          # Destroy all resources
+          terraform destroy -auto-approve -input=false
         env:
           GITHUB_TOKEN: ${{ secrets.TF_GITHUB_TOKEN }}
           TF_VAR_github_token: ${{ secrets.TF_GITHUB_TOKEN }}
