Move repos name definitio to workflow yaml

--- a/.github/workflows/terraform-manual.yml
+++ b/.github/workflows/terraform-manual.yml
@@ -17,6 +17,9 @@ permissions:
 
 env:
   TF_LOG: INFO
+  TF_VAR_repo_xxx: "xxx"
+  TF_VAR_repo_yyy: "yyy"
+  TF_VAR_repo_zzz: "zzz"
 
 jobs:
   terraform:
@@ -109,9 +112,13 @@ jobs:
         if: github.event.inputs.action == 'destroy'
         continue-on-error: true
         run: |
-          # Target only repositories for destruction
-          #terraform destroy -auto-approve -input=false \
-          #  -target="module.repository.github_repository.repos"
+          curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/etc/apt/keyrings/githubcli-archive-keyring.gpg
+          echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/githubcli.list > /dev/null
+          sudo apt update
+          sudo apt install gh
+          echo "${{ secrets.TF_GITHUB_TOKEN }}" | gh auth login --with-token
+
+          gh repo delete andreyayzenberg/${{ env.TF_VAR_repo_xxx }} --yes
 
           # Destroy all resources
           terraform destroy -auto-approve -input=false
