--- a/.github/workflows/terraform-manual.yml
+++ b/.github/workflows/terraform-manual.yml
@@ -114,7 +114,12 @@ jobs:
           #echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/githubcli.list > /dev/null
           sudo apt update
           sudo apt install gh
-          echo "${{ secrets.TF_GITHUB_TOKEN }}" | gh auth login --with-token
+          
+          # Unset GITHUB_TOKEN to avoid conflicts with gh auth
+          #unset GITHUB_TOKEN
+          #echo "${{ secrets.TF_GITHUB_TOKEN }}" | gh auth login --with-token
+          
+          gh auth login --with-token
 
           # Convert JSON array to bash array and iterate
           repositories=$(echo $TF_VAR_repositories | jq -r '.[]')
