fix gh auth issue

--- a/.github/workflows/terraform-manual.yml
+++ b/.github/workflows/terraform-manual.yml
@@ -117,9 +117,9 @@ jobs:
           
           # Unset GITHUB_TOKEN to avoid conflicts with gh auth
           #unset GITHUB_TOKEN
-          #echo "${{ secrets.TF_GITHUB_TOKEN }}" | gh auth login --with-token
           
-          gh auth login --with-token
+          echo "${{ secrets.TF_GITHUB_TOKEN }}" | gh auth login --with-token
+          #gh auth login --with-token
 
           # Convert JSON array to bash array and iterate
           repositories=$(echo $TF_VAR_repositories | jq -r '.[]')
@@ -130,7 +130,7 @@ jobs:
           # Destroy all resources
           terraform destroy -auto-approve -input=false
         env:
-          GITHUB_TOKEN: ${{ secrets.TF_GITHUB_TOKEN }}
+          #GITHUB_TOKEN: ${{ secrets.TF_GITHUB_TOKEN }}
           TF_VAR_github_token: ${{ secrets.TF_GITHUB_TOKEN }}
           TF_VAR_github_owner: ${{ github.repository_owner }}
 
